removed DEVILBOX_PATH env var usage

--- a/flames/revealjs/docker-compose.override.yml
+++ b/flames/revealjs/docker-compose.override.yml
@@ -12,4 +12,4 @@ services:
       app_net:
         ipv4_address: 172.16.238.130
     volumes:
-      - ${DEVILBOX_PATH}/data/revealjs:/revealjs/presentations
+      - ./data/revealjs:/revealjs/presentations
